logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-01T190000+0000/task_id=Load_songplays_fact_table/attempt=2.log
[2025-07-24T13:42:48.864+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T13:42:48.907+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T13:42:48.908+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T13:42:50.221+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 19:00:00+00:00
[2025-07-24T13:42:50.937+0000] {standard_task_runner.py:60} INFO - Started process 151 to run task
[2025-07-24T13:42:51.165+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T19:00:00+00:00', '--job-id', '316', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp_uwy6lku']
[2025-07-24T13:42:51.170+0000] {standard_task_runner.py:88} INFO - Job 316: Subtask Load_songplays_fact_table
[2025-07-24T13:42:52.476+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:42:54.395+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T19:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T19:00:00+00:00'
[2025-07-24T13:42:54.403+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:42:54.416+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T190000, start_date=20250724T134248, end_date=20250724T134254
[2025-07-24T13:42:54.975+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 316 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 151)
[2025-07-24T13:42:55.023+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:42:55.424+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T15:54:40.727+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T15:54:40.741+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T15:54:40.742+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T15:54:40.759+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 19:00:00+00:00
[2025-07-24T15:54:40.770+0000] {standard_task_runner.py:60} INFO - Started process 1210 to run task
[2025-07-24T15:54:40.775+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T19:00:00+00:00', '--job-id', '1209', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpw20nzpb_']
[2025-07-24T15:54:40.778+0000] {standard_task_runner.py:88} INFO - Job 1209: Subtask Load_songplays_fact_table
[2025-07-24T15:54:40.882+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T15:54:40.993+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T19:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T19:00:00+00:00'
[2025-07-24T15:54:46.084+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 173, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert, 'songplays'),
  File "/opt/airflow/dags/etl_pipeline.py", line 132, in load_table
    cur.execute(f"INSERT INTO {table} {query}")
psycopg2.errors.UniqueViolation: duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.

[2025-07-24T15:54:46.210+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T190000, start_date=20250724T155440, end_date=20250724T155446
[2025-07-24T15:54:46.336+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1209 for task Load_songplays_fact_table (duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.
; 1210)
[2025-07-24T15:54:46.414+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T15:54:46.534+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
